Added IR RMT transmitter initialisation

--- a/esp32/.gitignore
+++ b/esp32/.gitignore
@@ -1,3 +1,16 @@
 .pio
 CMakeListsPrivate.txt
 cmake-build-*/ 
+
+# OS
+.DS_Store
+
+# IDEs and editors
+/.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
