--- a/esp32/platformio.ini
+++ b/esp32/platformio.ini
@@ -13,7 +13,5 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 lib_deps =
-    adafruit/Adafruit NeoPixel@^1.10.5
+    fastled/FastLED@^3.5.0
     z3t0/IRremote@^4.0.0
-
-upload_port = /dev/ttyACM1
