--- a/esp32/platformio.ini
+++ b/esp32/platformio.ini
@@ -15,3 +15,6 @@ framework = arduino
 lib_deps =
     fastled/FastLED@^3.5.0
     z3t0/IRremote@^4.0.0
+    bblanchon/ArduinoJson@^6.19.4
+
+upload_port = /dev/ttyACM1
