Use the RTOS queue for communication between tasks

--- a/esp32/.gitignore
+++ b/esp32/.gitignore
@@ -14,7 +14,7 @@ cmake-build-*/
 .settings/
 *.sublime-workspace
 
-.vscode/*
+.vscode/
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
