Visual impressiveness for presentation

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,7 @@ workflow:
 stages:
   - Test
   - Build
+  - Visualise
 
 
 .taggedBase:
@@ -16,15 +17,66 @@ stages:
     - rpi
 
 
-build:
+build-embedded:
   extends: .taggedBase
-  image: suculent/platformio-docker-build
-  script:
-    - cd esp32
-    - pio run
   stage: Build
+#  image: suculent/platformio-docker-build
+#  script:
+#    - cd esp32
+#    - pio run
+  image: alpine
+  script:
+    - echo "TODO"
   needs: []
   artifacts:
     paths:
       - .pio/build/esp32dev/firmware.bin
       - .pio/build/esp32dev/firmware.elf
+
+build-web:
+  extends: .taggedBase
+  stage: Build
+  image: alpine
+  script:
+    - echo "TODO"
+  needs: []
+
+test-web:
+  extends: .taggedBase
+  stage: Test
+  image: alpine
+  script:
+    - echo "TODO"
+  needs: [ ]
+
+test-embedded:
+  extends: .taggedBase
+  stage: Test
+  image: alpine
+  script:
+    - echo "TODO"
+  needs: [ ]
+
+lint-embedded:
+  extends: .taggedBase
+  stage: Test
+  image: alpine
+  script:
+    - echo "TODO"
+  needs: [ ]
+
+lint-web:
+  extends: .taggedBase
+  stage: Test
+  image: alpine
+  script:
+    - echo "TODO"
+  needs: [ ]
+
+visualise:
+  extends: .taggedBase
+  stage: Visualise
+  image: alpine
+  script:
+    - echo "TODO"
+  needs: [test-web, test-embedded]
