--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,9 +50,12 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.40.1",
     "@typescript-eslint/parser": "^5.40.1",
+    "autoprefixer": "^10.4.12",
     "eslint": "^8.25.0",
     "eslint-plugin-react": "^7.31.10",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.7.1"
+    "postcss": "^8.4.18",
+    "prettier": "^2.7.1",
+    "tailwindcss": "^3.1.8"
   }
 }
