--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ workflow:
 stages:
   - Test
   - Build
-  - Visualise
+  - Deploy
 
 
 .taggedBase:
@@ -36,10 +36,21 @@ build-embedded:
 build-web:
   extends: .taggedBase
   stage: Build
-  image: alpine
+  image:
+    name: gcr.io/kaniko-project/executor:debug
+    entrypoint: [""]
   script:
-    - echo "TODO"
+    - mkdir -p /kaniko/.docker
+    - echo "{\"auths\":{\"${CI_REGISTRY}\":{\"auth\":\"$(printf "%s:%s" "${CI_REGISTRY_USER}" "${CI_REGISTRY_PASSWORD}" | base64 | tr -d '\n')\"}}}" > /kaniko/.docker/config.json
+    - >-
+      /kaniko/executor
+      --context "${CI_PROJECT_DIR}"
+      --dockerfile "${CI_PROJECT_DIR}/Dockerfile"
+      --destination "${CI_REGISTRY_IMAGE}/backend:${CI_COMMIT_REF_SLUG}"
   needs: []
+  rules:
+    - if: $CI_PIPELINE_SOURCE == "merge_request_event"
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
 
 test-web:
   extends: .taggedBase
@@ -68,15 +79,29 @@ lint-embedded:
 lint-web:
   extends: .taggedBase
   stage: Test
-  image: alpine
+  image: node:alpine
   script:
-    - echo "TODO"
+    - yarn global add eslint @typescript-eslint/eslint-plugin @typescript-eslint/parser npm-run-all prettier eslint-plugin-react
+    - cd backend
+    - yarn lint
+    - cd frontend
+    - yarn lint
   needs: [ ]
 
 visualise:
   extends: .taggedBase
-  stage: Visualise
+  stage: Deploy
   image: alpine
   script:
     - echo "TODO"
   needs: [test-web, test-embedded]
+
+deploy:
+  extends: .taggedBase
+  stage: Deploy
+  image: alpine
+  script:
+    - echo "TODO"
+  needs: [build-web]
+  rules:
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
