COnnected basic game dashboard to backend, also fixed embedded

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -16,6 +16,9 @@
     "noImplicitAny": true,
     "strictBindCallApply": true,
     "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false
+    "noFallthroughCasesInSwitch": false,
+    "paths": {
+      "@backend": ["../backend/src"]
+    }
   }
 }
